--- a/README.html
+++ b/README.html
@@ -913,7 +913,12 @@ hue-6-2: #e6c07b
       </li>
     </ol>
     <h2 id="project-demo-video">Project Demo Video</h2>
-    <p><a href="./armemorypalace.mp4">Demo Video Here</a></p>
+    <p>
+      <video width="420" height="240" controls>
+        <source src="./armemorypalace.mp4" type="video/mp4" />
+        Demo Video Here
+      </video>
+    </p>
     <h2 id="engineering-challenges">Engineering Challenges</h2>
     <h3 id="user-experience--user-interface-implementation-and-designs">
       User Experience &amp; User Interface Implementation and Designs
