renamed some files

--- a/README.html
+++ b/README.html
@@ -961,7 +961,7 @@ hue-6-2: #e6c07b
     </p>
     <br />
     <img src="./image/marker_edit.png" width="200" />
-    <img src="./image/marker-list.png" width="200" />
+    <img src="./image/marker_list.png" width="200" />
     <p>
       Furthermore, we wanted to provide a progression of difficulty levels so
       that users can ease into the process of learning / memorizing concepts. We
@@ -993,7 +993,7 @@ hue-6-2: #e6c07b
     <img
       align="right"
       style="margin: 10px;"
-      src="./image/limit-track.png"
+      src="./image/limit_track.png"
       width="200"
     />
     <p>
